--- a/Marco_Rodriguez_Anteproyecto.bib
+++ b/Marco_Rodriguez_Anteproyecto.bib
@@ -1,43 +1,35 @@
-\begin{thebibliography}{}
-
-
-@mastersthesis{Reyders2018,
-	author = {Morales, R.},
-	title = {Dise\={n}o de un sistema de reconocimiento de embarcaciones en
-             medio mar\'{\i}timo mediante el procesamiento de im\'{a}genes},
-	type = {{Trabajo de Grado}},
-	school = {Universidad Central de Venezuela},
+@article{QCGJ2018,
+	author = {Quiñones Cuenca, Manuel AND González Jaramillo, Víctor AND Torres, Rommel AND Jumbo, Miguel},
+	title = {Sistema De Monitoreo de Variables Medioambientales Usando Una Red de Sensores Inalámbricos y Plataformas De Internet De Las Cosas},
 	year = {2018},
+	url = "http://scielo.senescyt.gob.ec/scielo.php?script=sci\_arttext\&pid=S1390-65422017000100329\&nrm=iso",
+	volume = {http://scielo.senescyt.gob.ec/scielo.php?script=sci\_arttext\&pid=S1390-65422017000100329\&nrm=iso, 8},
+	year = {2017},
+	month = {02},
+	pages = {329 - 343},
+	publisher = {scielo},
+	crossref = {10.29019/enfoqueute.v8n1.139},
+
 }
 
-
-@mastersthesis{Bracho2016,
-	author = {Bracho, J.},
-	title = {Dise\={n}o e implementaci\'{o}n de un sistema de reconocimiento de matr\'{\i}cula vehiculares},
-	type = {{Trabajo de Grado}},
-	school = {Universidad Central de Venezuela},
-	year = {2016},
+@mastersthesis{DA2006,
+	author = {Dávila Frias, Alex Vicente},
+	title = {Diseño y construcción de un prototipo para medición y transmisión inalámbrica del consumo de energía eléctrica de un sistema monofásico bifilar},
+	type = {{Trabajo de Grado, http://bibdigital.epn.edu.ec/handle/15000/5119}},
+	school = {EPN, Quito},
+	year = {2006},
+	url = "http://bibdigital.epn.edu.ec/handle/15000/5119",
 }
 
-
-@ARTICLE{ARevew2014,
-	author = {Dhiraj, Y.G.  and Pramod, B.B.},
-	title = {A Review Paper on Automatic Number Plate Recognition (ANPR) System},
-	journal = {International Journal of Innovative Research in Advanced Engineering (IJIRAE)},
-	year = {2014},
-	volume = {1},
-	pages = {88-92}
+@article{RUIZ-AYALA2018,
+	author = {Ruiz-Ayala, Daniel Camilo AND Vides-Herrera, Carlos Arturo AND Pardo-GarcÍa, Aldo},
+	title = {Monitoreo de variables meteorológicas a través de un sistema inalámbrico de adquisición de datos},
+	year = {2018},
+	volume = {http://www.scielo.org.co/scielo.php?script=sci\_arttext\&pid=S2027-83062018000100333\&nrm=iso, 8},
+	month = {06},
+	pages = {333 - 341},
+	publisher = {scieloco},
+	crossref = {10.19053/20278306.v8.n2.2018.7971},
+	url= {http://www.scielo.org.co/scielo.php?script=sci\_arttext\&pid=S2027-83062018000100333\&nrm=iso},
 }
 
-@mastersthesis{Fernandez2011,
-	author = {Fern\'{a}ndez, A.},
-	title = {Desarrollo de un modelo computacional para un sistema de
-             reconocimiento de matr\'{\i}culas a través de una imagen
-             proveniente de una cámara de tr\'{a}fico},
-	type = {{Trabajo de Grado}},
-	school = {Universidad Central de Venezuela},
-	year = {2011}
-}
-
-
-\end{thebibliography}
