Antes de instalar texstudio 3.0

--- a/EIETdeG.tex
+++ b/EIETdeG.tex
@@ -50,8 +50,8 @@
 
 
 \usepackage{url}
-\usepackage{hyperref}
-%\usepackage[dvips,colorlinks=true,urlcolor=red,citecolor=black,anchorcolor=black,linkcolor=black]{hyperref}
+%\usepackage{hyperref}
+\usepackage[colorlinks=true,urlcolor=red,citecolor=black,anchorcolor=black,linkcolor=black]{hyperref}
 
 \UseRawInputEncoding
 
