--- a/MRTG.bib
+++ b/MRTG.bib
@@ -16,6 +16,14 @@
    Note = {Conferenze del Seminario di Matematica dell'Universit`a di Bari. Obtenido de http://citeseer.ist.psu.edu/48209.html el 26 diciembre 2004},
  Year = {1994} }
 
+@misc{MAlvarado,
+   Author = {M. Alvarado},
+   Title = {{Servicios de Medición Avanzada (AMI) para Redes Inteligentes y su Adaptabilidad en el Marco de la Legislaci\'on Ecuatoriana}},
+   Volume = {2011},
+   Number = {2011},
+   School = {Universidad de Cuenca},
+ Year = {2011} }
+
 @masterthesis{RuizM,
     author    = {Milton Ruiz},
     title     = {Interoperabilidad entre medidores inteligentes de energ\'ia el\'ectrica residencial},
@@ -43,7 +51,7 @@
 }
 
 @masterthesis{DianaL,
-    author    = {Diana Londo\'no},
+    author    = {Diana Londono},
     title     = {Desarrollo de una gu\'ia enfocada a medidores de energ\'ia y conexiones de medidores},
     school    = {Universidad Tecnol\'ogico de Pereira},
     ?_type     = {Tecnichal thesis},
