--- a/acroni.tex
+++ b/acroni.tex
@@ -5,5 +5,10 @@
 	\item[] \textbf{IEC}: International Electrotechnical Comission Comisión Electrotécnica Internacional
 	\item[] \textbf{RTOS}: Real Time Operative Sysyem, Sistema operativo en tiempo real
 	\item[] \textbf{AMR}: Automatic Meter Reading, Lectura de medición automática
+	\item[] \textbf{HAN}: Home Area Network, Red de área doméstica
+	\item[] \textbf{NAN}: Neighbourhood Area Network, Red de área de vecindario
+	\item[] \textbf{WAN}: Wide Area Network, Red de área amplia
+	\item[] \textbf{ISO}: International Organization for Standardization, Organización Internacional de Normalización
+	\item[] \textbf{OSI}: Open System Interconnection, Interconexión de Sistemas Abiertos
 	
 \end{itemize}
