--- a/ch2.tex
+++ b/ch2.tex
@@ -1,24 +1,19 @@
 % !TeX spellcheck = es_ES
 % !TeX encoding = ISO-8859-1
 
+En este capítulo se documentarán los fundamentos sobre sistemas SCADA, Medidores de energía, Redes WiFi Malladas y el protocolo Modbus.
 
 \section{Sistema SCADA}
 
 \subsection{Definición}
 
-\section{Sistemas de medición de energía eléctrica}
+\section{Fundamentos de medición consumo de energía eléctrica}
 
 \subsection{Definición}
 
-\section{Medidores de energía}
+Los medidores de consumo de energía eléctrica, también llamados contadores de energía debido a la tarea que desempeñan, son ``Un instrumento destinado a medir la energía eléctrica integrando la potencia con respecto al tiempo" \hspace*{1mm} \cite{energy-m-IEC}. Las compañías de electricidad utilizan medidores de energía instalados en cada cliente con el propósito de monitorear y facturar el consumo. Debido a ello estos equipos suelen estar calibrados en unidades de facturación de energía, comúnmente se utiliza el kilovatio hora [kWh] y se lee el valor registrado en cada medidor una vez ha llegado el período de cobranza.\\
 
-\subsection{Definición}
-
-Los medidores de consumo de energía eléctrica, también llamados contadores de energía debido a la tarea que desempeñan, son``Un instrumento destinado a medir la energía eléctrica integrando la potencia con respecto al tiempo" \hspace*{1mm} \cite{energy-m-IEC}. Las compañías de electricidad utilizan medidores de energía instalados en cada cliente con el propósito de monitorear y facturar el consumo. Debido a ello estos equipos suelen estar calibrados en unidades de facturación de energía, comúnmente se utiliza el kilovatio hora [kWh] y se lee el valor registrado en cada medidor una vez ha llegado el período de cobranza.\\
-
-Cuando se desea ahorrar energía durante ciertos periodos de tiempo, algunos medidores pueden registrar la demanda de energía, es decir el máximo uso de potencia en un intervalo de tiempo. Aplicar esta metodología de registro de demanda brinda la capacidad de variar las tarifas de electricidad durante el día, permitiendo registrar el consumo de cada usuario durante periodos de tarifas altas (picos de demanda) o en casos de tarifas bajas donde la demanda de energía en el sistema es baja y la energía menos costosa. Incluso en algunas áreas los medidores de energía poseen relés para desprendimiento de cargas durante períodos donde se registren picos muy altos de demanda.
-
-\subsubsection{Palabras a aclarar en la definición}
+Cuando se desea ahorrar energía durante ciertos periodos de tiempo, algunos medidores pueden registrar la demanda de energía, es decir el máximo uso de potencia en un intervalo de tiempo. Aplicar esta metodología de registro de demanda brinda la capacidad de variar las tarifas de electricidad durante el día, permitiendo registrar el consumo de cada usuario durante periodos de tarifas altas (picos de demanda) o en casos de tarifas bajas donde la demanda de energía en el sistema es baja y la energía menos costosa. Incluso en algunas áreas los medidores de energía poseen relés para desprendimiento de cargas por un periodo de tiempo en caso de picos muy altos de demanda.
 
 \subsection{Clasificación de los medidores}
 
@@ -68,11 +63,11 @@ Para realizar medición inteligente se pueden emplear diferentes tipos de tecnolo
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.8\linewidth]{img/infraestructura.png}
-	\caption{Infraestructura general de un sistema de medición avanzado. Tomado de ``Servicios de Medición Avanzada (AMI) para Redes Inteligentes y su Adaptabilidad en el Marco de la Legislación Ecuatoriana" \cite{MAlvarado}}
+	\captionsource{Infraestructura general de un sistema de medición avanzado}{Adaptado de \cite{MAlvarado}}
 	\label{fig:infraestructura}
 \end{figure}
 
-La infraestructura necesaria para la medición inteligente se divide en tres zonas de acuerdo al tipo de comunicación:
+La infraestructura necesaria para la medición inteligente se divide en tres zonas de acuerdo al tipo de comunicación \cite{MAlvarado}, dichas zonas son las siguientes:
 
 \begin{itemize}
 	\item Red de área local (HAN).
@@ -82,7 +77,7 @@ La infraestructura necesaria para la medición inteligente se divide en tres zona
 
 \subsubsection{Red de área local (Home Area Network)}
 
-Es un sistema integrado dentro de los hogares que permite la comunicación entre diferentes dispositivos inteligentes, el dispositivo límite de esta red es el medidor de energía eléctrica. Este tipo de redes puede utilizar comunicaciones cableadas como BPL (Broadband over Power Lines) o PLC (Power Line Carrier) pero también comunicaciones inalámbricas como redes privadas, una red de banda ancha o redes malladas para comunicarse con la red NAN.
+Es un sistema integrado dentro de los hogares que permite la comunicación entre diferentes dispositivos inteligentes, el dispositivo límite de esta red es el medidor de energía eléctrica. Este tipo de redes puede utilizar comunicaciones cableadas como BPL (Broadband over Power Lines) o PLC (Power Line Carrier) pero también comunicaciones inalámbricas como redes privadas,	 una red de banda ancha o redes malladas para comunicarse con la red NAN.
 \\
 
 
@@ -95,24 +90,74 @@ Este tipo de red permite la conexión entre múltiples HANs, es un sistema de inte
 
 Es la red encargada de conectar múltiples sistemas de distribución y actúa como un puente entre redes de menor tamaño y la red del cliente. Debe ofrecer una red de retorno para conectar los servicios de recolección de datos con las instalaciones del cliente. Dicha red de retorno puede adoptar una variedad de tecnologías (Ethernet, red celular, banda ancha) para transferir la información extraída de las redes NAN a las oficinas locales de servicios públicos. Una puerta de enlace perteneciente a la red WAN puede utilizar la conexión de banda ancha o una red basada en IP para proporcionar un acceso para que el cliente puede acceder a los datos requeridos. La privacidad, fiabilidad y seguridad de la información son los principales aspectos que se evalúan en este tipo de redes.
 
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=1.0 \linewidth]{img/Infraestructura1}
+	\caption{Arquitectura de red en comunicaciones para medición inteligente. J. Ekanayake and K. Liyanage, SMART GRID TECHNOLOGY AND APPLICATIONS, First edit. New Delhi, 2013.}
+	\label{fig:infraestructura1}
+\end{figure}
 
-\subsection{Protocolos}
 
-asfgdfdgfsdafffdffgfggdfgfnfsfdfdfdfnwksdnas.gealfesa
+\subsection{Normativa aplicada a las redes de medición}
+	
+Los problemas en redes de medición suelen ocurrir cuando falla la interoperabilidad entre los distintos sistemas que las componen, esto es causado por la transmisión de datos que se efectúa a través de diversas redes y sistemas de comunicación. Es por ello que la interoperabilidad se convierte en algo fundamental, permitiendo a la infraestructura y la información fluir correctamente en un sistema interoperable perimitiendo el intercambio de datos sin necesidad de la intervención manual. El punto más relevante de la interoperabilidad es proporcionar un sistema con la capacidad de integrar componentes plug-and-play, esto se refiere a la capacidad de configurar los componentes y el sistema principal automáticamente comienza a operar con solo conectarlo. Aunque es un concepto sencillo en muchas situaciones puede llegar a ser complejo y poco práctico mostrar una interfaz estándar entre dos sistemas diferentes. Estas consideraciones en la interoperabilidad no solo reducen los costos de instalación y de integración sino que también definen los requisitos que un componente nuevo debe tener para conectarse al sistema existente, lo que se refleja en la sustitución sencilla de componentes y en una alta escalabilidad del sistema en caso de una mayor demanda o implementación de tecnologías más eficientes.\\
 
-\section{Redes malladas}
 
-Lorem ipsumdsafnasodaodasodoñNOoñdsaodnfñnañoffmdklsfjdsgs
+\subsubsection{Modelo OSI}
+
+Existen diferentes modelos y arquitecturas referenciales para el diseño de un sistema, el primer modelo creado por la ISO en 1980 es llamado OSI (Open System Interconnection) es un estándar que tiene por objetivo conseguir interconectar sistemas de procedencia distinta para que estos pudieran intercambiar información sin ningún tipo de impedimentos debido a los protocolos con los que estos operaban de forma propia según su fabricante. El modelo OSI está conformado por 7 capas o niveles de abstracción:
+
+\begin{itemize}
+	\item[1.] De aplicación
+	\item[2.] De presentación
+	\item[3.] De sesión
+	\item[4.] De transporte
+	\item[5.] De red
+	\item[6.] De enlace de datos
+	\item[7.] Capa física
+	
+\end{itemize}
+
+Cada uno de estos niveles ejerce sus propias funciones para que en conjunto el sistema sea capaz de alcanzar su objetivo final. Es por esta abstracción que el modelo hace posible la intercomunicación en diferentes sistemas al delimitar las funciones que debe realizar cada capa de operación. Es importante aclarar que el modelo OSI no es la definición de una topología ni un modelo de red en sí mismo. Tampoco especifica ni define los protocolos que se utilizan en la comunicación, ya que estos están implementados de forma independiente a este modelo. Lo que realmente hace OSI es definir la funcionalidad de ellos para conseguir un estándar.
+
+
+\begin{itemize}
+	\item \textbf{Capa de aplicación}: Ofrece la posibilidad de acceder a los servicios de las demás capas. Define los protocolos que utilizan las aplicaciones para intercambiar datos. Normalmente el usuario no interactúa con esta capa sino con programas que sirven de interfaz para ocultar el nivel de complejidad subyacente.
+	
+	\item \textbf{Capa de presentación}: Se encarga de representar la información funcionando como un traductor entre equipos. En esta capa se trabajan más los datos en sí que cómo se establece el enlace para que estos lleguen. Se tratan aspectos como la semántica (qué significan) y la sintaxis (formato de los datos) para garantizar la compatibilidad con los equipos del sistema. También es la encargada de cifrar los datos y comprimirlos de ser necesario.
+	
+	\item \textbf{Capa de sesión}: Esta capa es la que se encarga de mantener y controlar el enlace establecido entre dos computadores que están transmitiendo datos de cualquier índole. Por lo tanto, el servicio provisto por esta capa es la capacidad de asegurar que, dada una sesión establecida entre dos máquinas, la misma se pueda efectuar para las operaciones definidas de principio a fin, reanudándolas en caso de interrupción.11? En muchos casos, los servicios de la capa de sesión son parcial o totalmente prescindibles.
+	
+\end{itemize}
+
+\subsubsection{GWAC}
+
+La integración de la automatización asociada con los recursos eléctricos es importante para respaldar una mayor eficiencia e incorporar recursos renovables, variables y vehículos eléctricos en el sistema eléctrico. Los problemas de integración que enfrenta esta comunidad son análogos a los que enfrenta la industria de la salud, los servicios de emergencia y otras comunidades complejas con muchas partes interesadas. Para resaltar este problema y fomentar la comunicación y el desarrollo de una comunidad de interoperabilidad de redes inteligentes, el GridWise Architecture Council (GWAC) creó un Marco de establecimiento de contexto de interoperabilidad. Este "modelo conceptual" ha sido útil para explicar la importancia de la alineación organizativa, además de las especificaciones de interfaz técnica e informativa para dispositivos y sistemas de "redes inteligentes". Como siguiente paso para construir una comunidad sensible a la interoperabilidad, el GWAC ha estado desarrollando un Modelo de madurez de interoperabilidad de redes inteligentes (SG IMM) tomando prestado del trabajo realizado por otros para abordar circunstancias similares. El modelo proporciona un medio para medir el estado y el progreso, analizar las brechas y priorizar los esfuerzos para mejorar la situación. El objetivo es crear una herramienta, o un conjunto de herramientas, que fomente una cultura de interoperabilidad en la comunidad de redes inteligentes. En la siguiente ilustración se hace referencia a una comparación de OSI y GWAC con sus respectivos niveles o capas cada uno:
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=1\linewidth]{img/OSIGWAC}
+	\caption{E. Hossain, Z. Han, and V. Poor, Smart Grid Communications and Networking. New York: CAMBRIDGE UNIVERSITY PRESS, 2012.}
+	\label{fig:osigwac}
+\end{figure}
+
+
+\section{Redes WiFi malladas}
 
 \subsection{Definición}
 
-Lorem ipsumdsafnasodaodasodoñNOoñdsaodnfñnañoffmdklsfjdsgs
+Una red WiFi mallada se puede definir como una red que permite la comunicación entre nodos a través de múltiples saltos en una topología mallada \cite{MBahr}. Un nodo es la unidad mínima de la red,
+estas unidades son las encargadas de generar los enlaces entre los dispositivos usuarios que construyen la red mallada. 
+
+Por lo general estas redes poseen clientes, enrutadores y puertas de enlace. Los clientes son dispositivos electrónicos, sistemas embebidos o sensores que pueden comunicarse con otros en la red. El enrutador es un dispositivo electrónico que sirve como un intermediario entre dos o más redes para transportar los datos de una red a otra. Y las compuertas de enlace son dispositivos electrónicos que conectan la red con Internet. \cite{VazquezA}
+
+Cuando un nodo no puede operar, el resto de los nodos en la red WiFi mallada aún pueden comunicarse con los otros, bien sea, directa o indirectamente a través de uno o más nodos intermediarios \cite{ScienceDirect}
+
+%Aquí debería poner una imagen sobre las redes mesh
 
 \subsection{Caracteristicas}
 
-Lorem ipsumdsafnasodaodasodoñNOoñdsaodnfñnañoffmdklsfjdsgs
-
-\subsubsection{Palabras a aclarar en la definicion}
+Internet es el ejemplo más conocido de una red mallada, puesto que internet es una red con una gigantesca cantidad de nodos en los que el mensaje sale de un nodo y llega a otro e entre las ventajas más relevantes de esta topología
 
 Lorem ipsumdsafnasodaodasodoñNOoñdsaodnfñnañoffmdklsfjdsgs
 
